data/data_base_waiting_for_index/today_2_4/content_13_02_03_13_12_41.txt

博客首页登录注册谁说刘备是正义的化身?
 发博文
博文

东郭先生的博客
http://blog.sina.com.cn/u/1263334063 [订阅][手机订阅]
首页博文目录图片关于我
个人资料

东郭先生
Qing  微博
加好友发纸条
写留言加关注
博客等级：
博客积分：185
博客访问：7,674
关注人气：7
精彩图文
叛逆青春，我从不后悔

搔首弄姿喵星人
新浪Qing

人间仙境真存在
新浪Qing

晚清的斗升小民
新浪Qing

佟丽娅生活写真
新浪Qing

面码各式表情图
新浪Qing

我为校花狂
新浪Qing
查看更多>>
相关博文
海神：最需要智商的航海探险
微游戏
曹操一家为啥都喜欢有夫之妇？
微三国
Python调用QQ截图工具
五步蛇
Python&nbs
当回忆不再总是
python笔记4
我的轻博客精选集
Python获取多输入值的方
夏诺的宝盒
"No Modul
Martin
博客备份脚本python实现
阿涵
更多>>
推荐博文
第九百二十五篇•《0
马未都
特此声明：雷政富事件引用的生活
宋雯雯2012
铁道部“饥饿式营销”很无耻
叶传龙
别让高价盒饭扯了高铁的后腿
吴龙贵
特赦贪官与减免个税
何家弘
别断言“房媳”落户北京不违规
伯通李
娱乐舞台还是政治舞台
刘洪波
日本被害妄想绘出远东军事地图
蒋丰
20130130唐师曾：恭王府
唐师曾
  &nb
王锦思
查看更多>>
正文字体大小：大 中 小
python中的缩进问题 (2012-03-02 23:10:00)转载▼
标签： python 缩进 杂谈	分类： 科技博文
缩进
空白在Python中是重要的。事实上行首的空白是重要的。它称为缩进。在逻辑行首的空白（空格和制表符）用来决定逻辑行的缩进层次，从而用来决定语句的分组。
这意味着同一层次的语句必须有相同的缩进。每一组这样的语句称为一个块。我们将在后面的章节中看到有关块的用处的例子。
你需要记住的一样东西是错误的缩进会引发错误。例如：
i = 5
 print 'Value is', i # Error! Notice a single space at the start of the line
print 'I repeat, the value is', i
当你运行这个程序的时候，你会得到下面的错误：
  File "whitespace.py", line 4
    print 'Value is', i # Error! Notice a single space at the start of the line
    ^
SyntaxError: invalid syntax
注意，在第二行的行首有一个空格。Python指示的这个错误告诉我们程序的语法是无效的，即程序没有正确地编写。它告诉你， 你不能随意地开始新的语句块 （当然除了你一直在使用的主块）。何时你能够使用新块，将会在后面的章节，如控制流中详细介绍。
如何缩进
不要混合使用制表符和空格来缩进，因为这在跨越不同的平台的时候，无法正常工作。我 强烈建议 你在每个缩进层次使用 单个制表符 或 两个或四个空格 。
选择这三种缩进风格之一。更加重要的是，选择一种风格，然后一贯地使用它，即 只 使用这一种风格。
分享：  分享到新浪Qing 
1
喜欢
阅读(510)┊ 评论 (0)┊	 收藏(0) ┊转载	 ┊ 喜欢▼ ┊打印┊举报
已投稿到：	 排行榜 圈子
前一篇：ios应用开发Objective-C入门教材[转载]
后一篇：python函数变量的使用！
评论 [发评论]
当第一个评论者吧！  抢沙发>>
发评论

更多>>

登录名： 密码： 找回密码 注册	记住登录状态

 分享到微博    评论并转载此博文

验证码： 请点击后输入验证码 收听验证码	 	 

匿名评论
发评论
以上网友发言只代表其个人观点，不代表新浪网的观点或立场。
< 前一篇
ios应用开发Objective-C入门教材[转载]
后一篇 >
python函数变量的使用！

新浪BLOG意见反馈留言板　不良信息反馈　电话：4006900000 提示音后按1键（按当地市话标准计费）　欢迎批评指正
新浪简介 | About Sina | 广告服务 | 联系我们 | 招聘信息 | 网站律师 | SINA English | 会员注册 | 产品答疑
Copyright © 1996 - 2013 SINA Corporation, All Rights Reserved
新浪公司 版权所有
 

幻灯播放
